2000-05-23  DJ Delorie  <dj@cygnus.com>

	* syscalls.cc (_cygwin_istext_for_stdio): New, for newlib
	* include/cygwin/version.h: Bump API number for detect old
	programs using old getc/putc macros
	
2000-05-23  DJ Delorie  <dj@cygnus.com>

	* dir.cc (writable_directory): handle root directories

Tue May 23 10:09:26 2000  Christopher Faylor <cgf@cygnus.com>

	* uname.cc (uname): Use a "s" to denote a snapshot to avoid confusion
	with the number "5".

Tue May 23 10:01:07 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::conv_to_posix_path): Avoid putting a trailing
	slash on a directory name when the ms-dos path spec is a root directory
	of a device.
	* registry.cc (reg_key::build_reg): Set 'key_is_invalid' flag rather
	than using an INVALID_HANDLE_KEY.
	(reg_key::get_int): Test for key validity before performing registry
	operations.
	(reg_key::set_int): Ditto.
	(reg_key::get_string): Ditto.
	(reg_key::set_string): Ditto.
	(reg_key::kill): Ditto.
	(reg_key::~reg_key): Ditto.

Tue May 23 01:13:33 2000  Christopher Faylor <cgf@cygnus.com>

	* mkvers.sh: Use snapshot date as build date since it is more
	interesting.
	* uname.cc (uname): Detect if this is a snapshot build and add an "S"
	to the version number.  Report the snapshot date as the release date.

Mon May 22 17:11:25 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (regopt): Scan HKLM if HKCU scan fails.

Mon May 16 23:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* dir.cc (rmdir): Care for misleading error messages
	when trying to remove a directory on a samba share.
        Eliminate superfluous else branch.
	* syscalls.cc (_rename): Additional check for ERROR_FILE_EXISTS
	if MoveFile fails.

Sun May 21 20:51:44 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move uinfo_init call to before sigproc_init to
	avoid a race.
	(noload): Add an extra argument for debugging.
	* uinfo.cc (uinfo_init): Eliminate test for multiple calls.